feat: Update plugin metadata and enhance functionality
- Updated plugin header information including version, description, and author details.
- Added activation and deactivation hooks for better lifecycle management.
- Implemented schema markup validation before outputting to the frontend.
- Introduced build scripts for both Windows and Unix-based systems to streamline packaging.
- Created a comprehensive CONTRIBUTING.md to guide new contributors.
- Added CHANGELOG.md to document all notable changes and version history.
- Included a POT file for internationalization support.
- Implemented uninstall script to clean up plugin options upon uninstallation.
- Enhanced overall code quality and organization.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,14 @@ wp-content/cache/
 *.log
 .htaccess
 
+# Build artifacts
+/build/
+dist/*
+!dist/.gitignore
+*.zip
+*.tar.gz
+*.rar
+
 # Plugin Specific
 tests/*.php
 !tests/index.php
@@ -14,7 +22,24 @@ tests/*.php
 .DS_Store
 node_modules/
 vendor/
+composer.lock
+package-lock.json
 
 # Temporary
 *_test.php
 *verify.php
+*.tmp
+*.temp
+*.swp
+*.swo
+*~
+
+# OS files
+.AppleDouble
+.LSOverride
+._*
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+.Spotlight-V100
+.Trashes
